Create artists module
